--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,89 @@
-.App {
-  text-align: center;
+*,
+*:before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html {
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 4rem;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-container {
+  margin: 10px;
+  justify-content: center;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(100px, 150px));
+  grid-template-rows: minmax(100px, 170px);
+  grid-auto-rows: minmax(100px, 120px);
+  grid-gap: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-item {
+  font-size: 4rem;
+  display: flex;
+  background-color: rgb(166, 166, 204);
+  align-items: center;
+  justify-content: center;
+  border: 2px solid black;
+  color: white;
+  box-shadow: 1px 1px 1px 1px gray;
+}
+
+.grid-item .calc-button {
+  background-color: rgb(231, 218, 35);
+}
+
+.grid-container :hover {
+  background-color: rgb(122, 122, 163);
+}
+
+.app-container {
+  display: flex;
+  justify-content: space-evenly;
+  height: 100vh;
+  background-image: url("./bg-images/mathBG.jpg");
+}
+
+#display {
+  background-color: beige;
+  grid-column: 1 / -1;
+  color: black;
+  font-size: 5rem;
+  justify-content: flex-end;
+  padding: 20px;
+}
+
+#history-title {
+  align-self: center;
+  font-size: 2rem;
+  text-decoration: underline;
+  padding: 20px;
+  margin-left: 0px;
+}
+
+.history {
+  margin: 10px;
+  min-width: 350px;
+  max-height: 670px;
+  border: 5px dashed rgb(32, 31, 28);
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: beige;
+  font-size: 1.5rem;
+}
+
+#eight {
+  box-shadow: -1px -1px 1px 1px gray;
 }
